--- a/index.html
+++ b/index.html
@@ -37,7 +37,17 @@
       <div v-if="playerWins" class="win">Você Ganhou!! :)</div>
       <div v-else class="lose">Você Perdeu!! :(</div>
     </div>
-    <div class="panel buttons"></div>
+    <div class="panel buttons">
+      <template v-if="running">
+        <button class="btn attack">Ataque</button>
+        <button class="btn especial-attack">Ataque Especial</button>
+        <button class="btn heal">Curar</button>
+        <button class="btn give-up" @click="running = !running">Desistir</button>
+      </template>
+      <template v-else>
+        <button @click="running = !running" class="btn new-game">Iniciar Jogo</button>
+      </template>
+    </div>
     <div class="panel logs"></div>
   </div>
     <script src="app.js"></script>
