--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         <button class="btn attack">Ataque</button>
         <button class="btn especial-attack">Ataque Especial</button>
         <button class="btn heal">Curar</button>
-        <button class="btn give-up" @click="running = !running">Desistir</button>
+        <button class="btn give-up" @click="running = false">Desistir</button>
       </template>
       <template v-else>
-        <button @click="running = !running" class="btn new-game">Iniciar Jogo</button>
+        <button @click="startGame" class="btn new-game">Iniciar Jogo</button>
       </template>
     </div>
     <div class="panel logs"></div>
