--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <button @click="startGame" class="btn new-game">Iniciar Jogo</button>
       </template>
     </div>
-    <div class="panel logs"></div>
+    <div v-if="logs.length" class="panel logs"></div>
   </div>
     <script src="app.js"></script>
 </body>
